--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ nav > ul > li > a {
 }
 
 #banner{
+	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.3);
 	height: 480px;
 	text-align: center;
