--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ body {
 
 /*header start*/
 nav{
-	background-color: transparent;
+	display: block;
+	/* background-color: transparent; */
 	height: 50px;
 }
 nav ul li,
@@ -216,9 +217,11 @@ section {
 }
 .gray_section .img_section {
 	width: 45%;
+	height: 100%;
 }
 .article_preview .img_section img {
 	width: 100%;
+	height: 100%;
 }
 .article_preview .text_section {
 	width: 55%;
