--- a/css/main.css
+++ b/css/main.css
@@ -17,11 +17,7 @@ body {
 /*header start*/
 nav{
 	display: block;
-<<<<<<< HEAD
 	 background-color: transparent; 
-=======
-	/* background-color: transparent; */
->>>>>>> origin/master
 	height: 50px;
 }
 nav ul li,
@@ -48,9 +44,8 @@ nav > ul > li > a {
 }
 
 #banner{
-	background-color: rgb(0, 0, 0);
 	background-color: rgba(0, 0, 0, 0.3);
-	height: 480px;
+	height: 460px;
 	text-align: center;
 }
 #banner .inner {
@@ -105,7 +100,7 @@ section {
 .green_section {
 	width: 100%;
 	height: 400px;
-	background-color: rgba(105,192,204,0.8);
+	background-color: rgb(105,192,204);
 	padding: 30px 0px;
 	text-align: center;
 }
@@ -346,8 +341,5 @@ ul.share_group .copy {
 
 .main_wrapper {
 	background-image:url(../images/bg.jpg);
-	background-repeat:repeat-y;
-	background-attachment:fixed;
 	background-position: center;
-
 }
